--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -8,7 +8,16 @@
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
+analyzer:
+  errors:
+    # avoid_print: ignore
+    todo: ignore
 
+  # exclude: [build/**]
+  enable-experiment:
+  language:
+    strict-casts: true
+    strict-raw-types: true
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -27,3 +36,4 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
